Server now uses updated format

--- a/datatags-app/app/views/comps/node.scala.html
+++ b/datatags-app/app/views/comps/node.scala.html
@@ -9,7 +9,7 @@
 
 @callNode( n:CallNode ) = {
   <td class="node node-call">call</td>
-  <td>@n.getCalleeNodeId</td>
+  <td>@n.getCalleeNode.getId</td>
 }
 
 @setNode( n:SetNode ) = {
