--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -1,4 +1,4 @@
-@( qKit:QuestionnaireKit,
+@( qKit:PolicyModelVersionKit,
    dataTags: edu.harvard.iq.datatags.model.values.CompoundValue,
    codeTag: Option[edu.harvard.iq.datatags.model.values.TagValue],
    requestedInterview: Option[RequestedInterviewSession],
@@ -20,7 +20,7 @@
       @*</div>*@
       <div class="panel panel-success">
           <div class="panel-heading">
-              <h3 class="panel-title">@comps.msg(qKit,"acceptance.title")</h3>
+              <h3 class="panel-title">Interview Completed - Final Results</h3>
           </div>
           <div class="panel-body">
               <div class="text-center">
