--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -122,7 +122,7 @@
         </table>
       }
 
-      <h3>Tags</h3>
+      <h3>Policy Space</h3>
       <p>
         The chart below displays the range of tags that may be suggested at the conclusion of the interview.
         These tags cover properties such as the regulatory classification of the information, the sensitivity of the information,
@@ -130,7 +130,7 @@
         Hover/touch the <i class="glyphicon glyphicon-info-sign"></i> icons, where available, to see a short explanation about specific values.
       </p>
 
-      @comps.tagType(qKit.model.getSpaceRoot)
+      @comps.tagType(qKit.model.getSpaceRoot, None)
 
     </div>
   </div>
