--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -1,10 +1,12 @@
+@import edu.harvard.iq.datatags.externaltexts.Localization
+@import edu.harvard.iq.datatags.model.values.AtomicValue
 @( qKit:PolicyModelVersionKit,
    dataTags: edu.harvard.iq.datatags.model.values.CompoundValue,
    codeTag: Option[edu.harvard.iq.datatags.model.values.TagValue],
    requestedInterview: Option[RequestedInterviewSession],
-   answerHistory: Seq[AnswerRecord] )
-
-@import edu.harvard.iq.datatags.model.values.AtomicValue
+   answerHistory: Seq[AnswerRecord],
+   loc:Option[Localization]
+)
 
 @scripts = {
     <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
@@ -36,8 +38,7 @@
                   }
               </div>
               <!-- <h3>Full Tags</h3> -->
-              @comps.tagValue(dataTags)
-
+              @comps.tagValue(dataTags, loc)
 
               <div class="text-right">
                 <br />
@@ -56,7 +57,7 @@
             <h3 class="panel-title">Answer History</h3>
           </div>
           <div class="panel-body">
-            @comps.answerHistory(answerHistory, qKit.id, false, qKit.serializer)
+            @comps.answerHistory(answerHistory, qKit.id, false, qKit.serializer, loc)
           </div>
   </div></div></div>
   @requestedInterview match {
