--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -1,9 +1,12 @@
+@import edu.harvard.iq.datatags.externaltexts.Localization
 @( questionnaireId: String,
    questionNode: edu.harvard.iq.datatags.model.graphs.nodes.AskNode,
    dataTags: edu.harvard.iq.datatags.model.values.CompoundValue,
    history:Seq[edu.harvard.iq.datatags.model.graphs.nodes.Node],
    serializer:Serialization,
-   answerHistory: Seq[AnswerRecord])
+   answerHistory: Seq[AnswerRecord],
+   loc:Option[Localization]
+)
 
 @scripts = {
     <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
@@ -21,23 +24,32 @@
                 <h3 class="panel-title">Question: Please select one answer</h3>
             </div>
             <div class="panel-body">
-                <span class="questionText">@Helpers.bulletPoint(questionNode.getText)</span>
-                @if( ! questionNode.getTermNames.isEmpty() ) {
-                    <h4 class="text-muted">Terms</h4>
-                    <dl>
-                        @for( termName <- questionNode.getTermNames ) {
-                            <dt>@termName</dt>
-                            <dl>@Helpers.bulletPoint(questionNode.getTermText(termName))</dl>
-                        }
-                    </dl>
-                }
+                <span class="questionText">
+                  @defining( loc.map(l=>l.getNodeText(questionNode.getId)).getOrElse(java.util.Optional.empty) ){ nodeTextOpt =>
+                    @if( nodeTextOpt.isPresent ) {
+                      @Helpers.renderMarkdown( nodeTextOpt.get )
+
+                    }else{
+                      @Helpers.bulletPoint(questionNode.getText)</span>
+                      @if( ! questionNode.getTermNames.isEmpty() ) {
+                          <h4 class="text-muted">Terms</h4>
+                          <dl>
+                              @for( termName <- questionNode.getTermNames ) {
+                                  <dt>@termName</dt>
+                                  <dl>@Helpers.bulletPoint(questionNode.getTermText(termName))</dl>
+                              }
+                          </dl>
+                      }
+                    }
+                  }
+
             </div>
             <div class="panel-footer">
                 @helper.form( action=routes.Interview.answer(questionnaireId, questionNode.getId), 'id->"answerForm" ) {
                     @for( ans <- questionNode.getAnswers ) {
                         <button class="btn btn-default"
                                 onclick="$('#answerText')[0].value='@ans.getAnswerText'; $('#answerForm').submit();" >
-                                @Helpers.makeUpper(ans.getAnswerText)</button>
+                                @loc.map( l=>l.localizeAnswer(ans.getAnswerText)).getOrElse(Helpers.makeUpper(ans.getAnswerText))</button>
                     }
                     <input type="hidden" name="answerText" id="answerText" value="" />
                     <input type="hidden" name="serializedHistory" id="serializedHistory" value="@serializer.encode(answerHistory)"/>
@@ -54,7 +66,7 @@
             </div>
             <div class="panel-body">
                 @if( answerHistory.nonEmpty ) {
-                    @comps.answerHistory(answerHistory, questionnaireId, reverse=true, serializer)
+                    @comps.answerHistory(answerHistory, questionnaireId, reverse=true, serializer, loc)
                 } else {
                     <div class="well well-sm text-center">
                         <span class="muted small">This space will contain your answers, and will allow you to revisit them when needed.</span>
@@ -72,10 +84,10 @@
                 <ul class="list-unstyled">
                     @if( dataTags.getNonEmptySubSlotTypes.isEmpty ) {
                         <div class="well well-sm text-center">
-                            <span class="muted small">This space will contain the tags for your dataset. It will be updated as we go along.</span>
+                            <span class="muted small">This space will contain the resultant policy. It will be updated as we go along.</span>
                         </div>    
                     } else {
-                        @comps.tagValue(dataTags)
+                        @comps.tagValue(dataTags, loc)
                     }
                 </ul>
             </div>
