--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -1,7 +1,12 @@
+@import edu.harvard.iq.datatags.externaltexts.Localization
+@import edu.harvard.iq.datatags.model.graphs.nodes.RejectNode
+@import Helpers.{o2o, renderMarkdown}
 @(qKit: PolicyModelVersionKit,
-        reason: String,
-        requestedInterview: Option[RequestedInterviewSession],
-        answerHistory: Seq[AnswerRecord])
+  node: RejectNode,
+  requestedInterview: Option[RequestedInterviewSession],
+  answerHistory: Seq[AnswerRecord],
+  loc:Option[Localization]
+)
 
 @templates.bsNavBar("Dataset Rejected", 'tag) {
   <div class="row">
@@ -11,7 +16,7 @@
           <h3 class="panel-title">Interview Terminated due to Rejection</h3>
         </div>
         <div class="panel-body">
-        @reason
+          @loc.flatMap( l=>o2o(l.getNodeText(node.getId)).map( renderMarkdown _ ) ).getOrElse( Html(node.getReason))
         </div>
       </div>
     </div>
@@ -23,7 +28,7 @@
           <h3 class="panel-title">Answer History</h3>
         </div>
         <div class="panel-body">
-        @comps.answerHistory(answerHistory, qKit.id, false, qKit.serializer)
+        @comps.answerHistory(answerHistory, qKit.id, false, qKit.serializer, loc)
         </div>
       </div>
     </div>
@@ -33,16 +38,12 @@
     case Some(interview) => {
       <div class="center-block" style="text-align: center">
         <p> Click the button below to return to your data repository with the reason your dataset can not be accepted. </p>
-        <form action="@routes.RequestedInterview.unacceptableDataset(interview.key, reason)" method="POST">
+        <form action="@routes.RequestedInterview.unacceptableDataset(interview.key, node.getReason)" method="POST">
           <button class="btn btn-primary" type="submit">Back to Data Repository</button>
         </form>
       </div>
     }
     case None => {
-      <div class="note note-todo">
-                  Here endeth the demo. If the interview was requested by an external system (e.g. Dataverse or another data repository),
-        that external system will receive the tags and you'll be redirected there.
-      </div>
       <div class="col-md-2 col-md-offset-5">
         <a href="@routes.Application.index" class="btn btn-primary">Start again</a>
       </div>
