--- a/datatags-app/app/views/tagsTree.scala.html
+++ b/datatags-app/app/views/tagsTree.scala.html
@@ -1,18 +1,24 @@
 @import edu.harvard.iq.datatags.model.values.TagValue
 @import edu.harvard.iq.datatags.model.types.CompoundSlot
-@(tagType: CompoundSlot, tagValue:TagValue)
+@import edu.harvard.iq.datatags.externaltexts.Localization
+@(tagType: CompoundSlot, tagValue:TagValue, loc:Option[Localization])
 
 @templates.bsBase("Tag trees")(){
     <div class="content">
-        <div class="row">
-            <div class="col-md-6">
-                <h3>type</h3>
-                @comps.tagType( tagType )
-            </div>
-            <div class="col-md-6">
-                <h3>value</h3>
-                @comps.tagValue(tagValue)
-            </div>
+      <div class="row">
+        <div class="col-md-12">
+          Localization: @loc.toString
         </div>
+      </div>
+      <div class="row">
+          <div class="col-md-6">
+              <h3>type</h3>
+              @comps.tagType( tagType, loc )
+          </div>
+          <div class="col-md-6">
+              <h3>value</h3>
+              @comps.tagValue(tagValue, loc)
+          </div>
+      </div>
     </div>
 }
