Integrated the dg-visualization with the intro page

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -300,3 +300,24 @@ footer {
   }
 }
 
+
+.visualizationList {
+  list-style: none;
+  padding: 4px;
+
+  li {
+    display: inline-block;
+    margin: 4px;
+
+    a {
+      border-radius: 4px;
+      padding: 4px;
+      border: 1px solid #888;
+      background-color: #DDD;
+    }
+    a:hover {
+      background-color: #FFD;
+      text-decoration: none;
+    }
+  }
+}
