--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -57,14 +57,24 @@
         }
         </ul>
       }
-      @if(qKit.decisionGraphVisuazliations.nonEmpty){
-        <h3>Visualizations</h3>
-        <ul class="visualizationList">
-          <li>Decision Graph:</li>
-          @for( p <- qKit.decisionGraphVisuazliations ){
-            <li><a href="@routes.Application.visualizationFile(qKit.id + "/" + qKit.version + "/" + p.getFileName)">@p.getFileName.toString.split("\\.").last</a></li>
-          }
-        </ul>
+      @defining( qKit.availableVisualizations ) { avz =>
+        @if( avz.hasData){
+          <h3>Visualizations</h3>
+          <ul class="visualizationList">
+            @if( avz.decisionGraph.nonEmpty ) {
+              <li><strong>Decision Graph:</strong></li>
+              @for(p <- avz.decisionGraph) {
+                <li><a href="@routes.Application.visualizationFile(qKit.id + "/" + qKit.version + "/" + p.getFileName)">@p.getFileName.toString.split("\\.").last</a></li>
+              }
+            }
+            @if( avz.policySpace.nonEmpty ) {
+              <li><strong>Policy Space:</strong></li>
+              @for(p <- avz.policySpace) {
+                <li><a href="@routes.Application.visualizationFile(qKit.id + "/" + qKit.version + "/" + p.getFileName)">@p.getFileName.toString.split("\\.").last</a></li>
+              }
+            }
+          </ul>
+        }
       }
       <h3>Metadata</h3>
       @defining( qKit.model.getMetadata ) { md =>
