--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -321,3 +321,13 @@ footer {
     }
   }
 }
+
+@padding:4px;
+.errors {
+  padding: @padding;
+  border-radius: 0 0 @padding @padding;
+  background-color: #FAA;
+  color: #A00;
+  border: 1px solid #A00;
+  margin-bottom: 0.5em;
+}
