--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -19,10 +19,10 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    <link href="@routes.Assets.at("css/main.min.css")" rel="stylesheet">
-	  <link href="@routes.Assets.at("css/tags.min.css")" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
+    <link rel="stylesheet" href="@routes.Assets.at("vnd/swal/sweetalert.css")">
+    <link rel="stylesheet" href="@routes.Assets.at("css/main.min.css")">
+	  <link rel="stylesheet" href="@routes.Assets.at("css/tags.min.css")">
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png">
 	   @extraHead
     @*@comps.analytics()*@
   </head>
@@ -52,6 +52,7 @@
   </footer>   
     <script src="@routes.Assets.at("js/jquery.min.js")"></script>
     <script src="@routes.Assets.at("js/bootstrap.min.js")"></script>
+    <script src="@routes.Assets.at("vnd/swal/sweetalert.min.js")"></script>
     @scripts
   <script type="text/javascript">
     $(document).ready( function(){ 
