--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -331,3 +331,22 @@ footer {
   border: 1px solid #A00;
   margin-bottom: 0.5em;
 }
+
+@ndColor: #eee;
+@ndPadding: 10px;
+
+.noData {
+  text-align: center;
+  background-color: darken(@ndColor, 20%);
+  border: 1px solid darken(@ndColor, 30%);
+  color: lighten(@ndColor, 10%);
+  padding: @ndPadding;
+  border-radius: @ndPadding;
+  text-shadow: 0 1px 2px rgba(0,0,0,.25), 0 -1px 2px rgba(255,255,255,0.35);
+  box-shadow: inset 0 1px 2px rgba(0,0,0,.25);
+
+  a {
+    color: #4B4BFF;
+    font-weight: bold;
+  }
+}
