--- a/datatags-app/app/views/templates/bsNavBar.scala.html
+++ b/datatags-app/app/views/templates/bsNavBar.scala.html
@@ -25,10 +25,8 @@
     <div class="collapse navbar-collapse" id="navbar-collapse">
 
       <ul class="nav navbar-nav">
-        @*<li @if( section=='tag) {class="active"}><a href="@routes.Application.questionnaireCatalog">Tag</a></li>*@
-        @*<!--<li @if( section=='abt) {class="active"}><a href="#">About</a></li>*@
-        @*<li @if( section=='chg) {class="active"}><a href="@routes.Application.changeLog">Change Log</a></li>*@
         <li>
+          <a href="@routes.PolicyKitManagementCtrl.showVpmList()">Manage Models</a>
         </li>
       </ul>
       
