Added policy model management

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -350,3 +350,9 @@ footer {
     font-weight: bold;
   }
 }
+
+table>tbody>tr>td.noteTd {
+  border-top: none;
+  border-left: #ddd solid 1px;
+  border-right: #ddd solid 1px;
+}
