--- a/datatags-app/app/views/backoffice/versionedPolicyModelEditor.scala.html
+++ b/datatags-app/app/views/backoffice/versionedPolicyModelEditor.scala.html
@@ -49,7 +49,7 @@
           </div>
         </div>
 
-        <div class="form-group@Helpers.fieldStatus(form("title"))">
+        <div class="form-group@Helpers.fieldStatus(form("note"))">
           <label for="noteInput" class="col-sm-2 control-label">Note</label>
           <div class="col-sm-10">
             <textarea id="noteInput" name="note" class="form-control" rows="5">@form("note").value.getOrElse("")</textarea>
