login/logout and backend status ready

--- a/datatags-app/app/views/backoffice/users/userEditor.scala.html
+++ b/datatags-app/app/views/backoffice/users/userEditor.scala.html
@@ -1,6 +1,6 @@
 @(form:Form[UserFormData], destination:Call, isNew:Boolean)
 
-@templates.bsNavBar("Profile Editor", 'backOffice ) {
+@templates.backend("Profile Editor", 'backOffice ) {
   <div class="row">
     <div class="col-md-12">
       <h1>User Profile Editor</h1>
