--- a/datatags-app/app/views/backoffice/versionedPolicyModelList.scala.html
+++ b/datatags-app/app/views/backoffice/versionedPolicyModelList.scala.html
@@ -1,6 +1,6 @@
 @( models:Seq[VersionedPolicyModel], message:Option[String] )
 
-@templates.bsNavBar("Versioned Policy Model Editor", 'backOffice ) {
+@templates.backend("Versioned Policy Model Editor", 'backOffice ) {
   <div class="row">
     <div class="col-md-12">
       <h1>
