--- a/datatags-app/app/views/backoffice/versionedPolicyModelEditor.scala.html
+++ b/datatags-app/app/views/backoffice/versionedPolicyModelEditor.scala.html
@@ -6,7 +6,7 @@
 }
 
 
-@templates.bsNavBar("Versioned Policy Model Editor", 'backOffice, scripts ) {
+@templates.backend("Versioned Policy Model Editor", 'backOffice, scripts ) {
 
   <div class="row">
     <div class="col-md-12">
