--- a/datatags-app/app/views/backoffice/versionedPolicyModelViewer.scala.html
+++ b/datatags-app/app/views/backoffice/versionedPolicyModelViewer.scala.html
@@ -8,7 +8,7 @@
   }
 }
 
-@templates.bsNavBar("Versioned Policy Model Editor", 'backOffice, scripts ) {
+@templates.backend("Versioned Policy Model Editor", 'backOffice, scripts ) {
 
   <div class="row">
     <div class="col-md-12">
