--- a/datatags-app/app/views/templates/backend.scala.html
+++ b/datatags-app/app/views/templates/backend.scala.html
@@ -24,13 +24,21 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
 
-      @*
       <ul class="nav navbar-nav">
+        <li>
+          <a href="@routes.PolicyKitManagementCtrl.showVpmList()">Models</a>
+        </li>
+        <li>
+          <a href="@routes.UsersCtrl.showUserList()">Users</a>
+        </li>
       </ul>
-      *@
-      
+
+      <form class="navbar-form navbar-left" method="POST" action="@routes.UsersCtrl.doLogout">
+        <button type="submit" class="btn btn-sm btn-warning"><i class="fa fa-sign-out"> Logout</i></button>
+      </form>
+
       <ul class="nav navbar-nav navbar-right">
-        <li><a data-toggle="tooltip" data-placement="bottom" title="Log in to manage" href="@routes.UsersCtrl.showLogin()"><i class="fa fa-sign-in"></i></a></li>
+
         <li><a data-toggle="tooltip" data-placement="bottom" href="http://datatags.org" target="_blank" title="Project's home"><i class="fa fa-home"></i></a></li>
         <li><a data-toggle="tooltip" data-placement="bottom" href="https://github.com/IQSS/DataTags/" title="We're open source! Visit us at GitHub" target="_blank"><i class="fa fa-github-alt"></i></a></li>
         <li><a data-toggle="tooltip" data-placement="bottom" href="http://iq.harvard.edu" title="Institute of Quantitative Social Science" target="_blank">IQSS</a></li>
