--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -1,4 +1,4 @@
-@(qKit: PolicyModelVersionKit, interviewWelcomeMessage:Option[String])
+@(qKit: PolicyModelVersionKit, interviewWelcomeMessage:Option[String])(implicit req:Request[_])
 
 @scripts = {
   <script type="text/javascript" src="@routes.Assets.at("js/InterviewIntro.js")"></script>
