--- a/datatags-app/app/views/templates/backend.scala.html
+++ b/datatags-app/app/views/templates/backend.scala.html
@@ -26,6 +26,9 @@
 
       <ul class="nav navbar-nav">
         <li>
+          <a href="@routes.BackendCtrl.index()">Dashboard</a>
+        </li>
+        <li>
           <a href="@routes.PolicyKitManagementCtrl.showVpmList()">Models</a>
         </li>
         <li>
