--- a/datatags-app/app/views/modelCatalog.scala.html
+++ b/datatags-app/app/views/modelCatalog.scala.html
@@ -4,10 +4,8 @@
   <div class="container" id="content">
     <div class="row">
       <div class="col-md-12">
-        <h1>Available Questionnaires</h1>
-        <p>
-          Click a policy model from the list to start its interview.
-        </p>
+        <h1>Available Models</h1>
+
         <ul class="list-unstyled">
         @for(vpm <- vpms) {
           <li>
