--- a/datatags-app/app/views/templates/backend.scala.html
+++ b/datatags-app/app/views/templates/backend.scala.html
@@ -36,16 +36,15 @@
         </li>
       </ul>
 
-      <form class="navbar-form navbar-left" method="POST" action="@routes.UsersCtrl.doLogout">
-        <button type="submit" class="btn btn-sm btn-warning"><i class="fa fa-sign-out"> Logout</i></button>
-      </form>
-
       <ul class="nav navbar-nav navbar-right">
-
         <li><a data-toggle="tooltip" data-placement="bottom" href="http://datatags.org" target="_blank" title="Project's home"><i class="fa fa-home"></i></a></li>
         <li><a data-toggle="tooltip" data-placement="bottom" href="https://github.com/IQSS/DataTags/" title="We're open source! Visit us at GitHub" target="_blank"><i class="fa fa-github-alt"></i></a></li>
         <li><a data-toggle="tooltip" data-placement="bottom" href="http://iq.harvard.edu" title="Institute of Quantitative Social Science" target="_blank">IQSS</a></li>
       </ul>
+      <form class="navbar-form navbar-right" method="POST" action="@routes.UsersCtrl.doLogout">
+        <button type="submit" class="btn btn-sm btn-warning"><i class="fa fa-sign-out"> Logout</i></button>
+      </form>
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
