--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -304,6 +304,7 @@ footer {
 .visualizationList {
   list-style: none;
   padding: 4px;
+  display: inline-block;
 
   li {
     display: inline-block;
