--- a/datatags-app/app/views/backoffice/users/userList.scala.html
+++ b/datatags-app/app/views/backoffice/users/userList.scala.html
@@ -17,7 +17,7 @@
           At the moment, the system contains no users.
         </div>
       } else {
-        <table class="table table-striped">
+        <table class="table table-striped table-responsive">
           <thead>
             <tr>
               <th>Name</th>
